--- a/css/gems.css
+++ b/css/gems.css
@@ -1,15 +1,18 @@
 /* Select the image with a id of ruby */
 
-/*selector for ruby goes here */  {
-  position: absolute;
-  z-index: 1;
-  top: 315px;
+/*selector for ruby goes here */  
+ {
+  position: absolute; 
+  z-index: 1; 
+  top: 315px; 
   left: 175px;
+  
 }
 
 /* Select the image with class of emerald */
 
-/*selector for emerald goes here */  {
+/*selector for emerald goes here */  
+ {
   position: absolute;
   z-index: 2;
   top: 350px;
@@ -18,7 +21,9 @@
 
 /* Select the image inside the element with an id of sand (using its descendant relationship) */
 
-/*selector for sapphire goes here */{
+
+/*selector for sapphire goes here */ 
+{
   position: absolute;
   z-index: 5;
   top: 315px;
